--- a/src/compoments/card/cardStyle.css
+++ b/src/compoments/card/cardStyle.css
@@ -6,12 +6,12 @@
 
   .card {
     display: flex;
-    background-color: white;
+    background-color: #1e1e2f;
     border-radius: 10px;
     overflow: hidden;
     max-width: 800px;
     width: 100%;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 10px #01adc87e;
   }
 
   .card-image {
@@ -37,7 +37,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.5);
+    border-bottom: 2px solid #01afc8;
   }
 
   .card-detail-row.last {
@@ -46,10 +46,10 @@
 
   .card-detail-row h3 {
     font-size: 20px;
-    color: #4b5563;
+    color: #a4f643;
   }
 
   .card-detail-row p {
     font-size: 20px;
-    color: #000;
+    color: white;
   }
