--- a/src/compoments/sidebarFilter/sidebarStyles.css
+++ b/src/compoments/sidebarFilter/sidebarStyles.css
@@ -6,7 +6,7 @@
     font-size: 15px;
     font-weight: bold;
     margin-bottom: 10px;
-    color: #25238b;
+    color: #a4f643;
 }
 
 .filter-group select,
@@ -14,7 +14,7 @@
     width: 100%;
     padding: 10px;
     font-size: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid #2ec4b6;
     border-radius: 5px;
     background-color: white;
 }
@@ -22,5 +22,5 @@
 .filter-group select:focus,
 .filter-group input:focus {
     outline: none;
-    box-shadow: 0 0 0 2px rgba(139, 92, 246, 0.2);
+    box-shadow: 0 0 0 2px #2ec4b6;
 }
