--- a/src/compoments/inctructions/instructionsStyle.css
+++ b/src/compoments/inctructions/instructionsStyle.css
@@ -7,7 +7,7 @@
   background-position: center;
   width: 200px;
   height: 200px;
-  color: #fff;
+  color: white;
   text-shadow: 2px 2px 4px black;
   font-weight: bold;
   font-size: 20px;
